Reformatting code, refactoring, GitHub Copilot checkstyle fixes